@@ -1,26 +1,45 @@
 #!/usr/bin/python
-'''
-Simple program to test the slideshow using a real webkit.WebView widget.
 
-Please excuse its horrifying ugliness.
-'''
-
-import os, sys
-import subprocess
+import os
 import gtk
-import gobject
-import ConfigParser
 import webkit
+import ConfigParser
+import subprocess
 
+import sys
+import locale
+from optparse import OptionParser
+import gobject
 
+'''
+A basic GTK widget (webkit.WebView) which displays a slideshow in the
+ubiquity-slideshow format. Feel free to copy and paste this to your application
+and customize it as needed.
+'''
 class SlideshowViewer(webkit.WebView):
-	def __init__(self, path):
+	'''
+	@param  path  Path to the slideshow, in which the slideshow.conf file is stored.
+	@param  locale  Ideal locale to use for the slideshow
+	@param  rtl  True if the given locale should be displayed right-to-left
+	'''
+	def __init__(self, path, locale='c', rtl=False):
 		self.path = path
 		
 		config = ConfigParser.ConfigParser()
 		config.read(os.path.join(self.path,'slideshow.conf'))
 		
+		self.locale = self._find_available_locale(locale)
+		
+		slideshow_main = 'file://' + os.path.join(self.path, 'slides', 'index.html')
+		parameters = ''
+		if self.locale != 'c': #slideshow will use default automatically
+			parameters += '?locale=' + self.locale
+			if rtl:
+				parameters += '?rtl'
+		
 		webkit.WebView.__init__(self)
+		
+		self.open(slideshow_main+'#'+parameters)
 		
 		settings = self.get_settings()
 		#settings.set_property("enable-default-context-menu", False)
@@ -28,21 +47,42 @@ class SlideshowViewer(webkit.WebView):
 		settings.set_property("enable-universal-access-from-file-uris", True)
 		
 		config_width = int(config.get('Slideshow','width'))
-		config_height = int(config.get('Slideshow','height'))
+		config_height = int(config.get('Slideshow','height'))+100
 		self.set_size_request(config_width,config_height)
 		
-		self.open( os.path.join(self.path, "slides", "index.html"))
-		
-		self.connect('populate-popup', self.on_populate_popup) #TODO: remove this when the enable-default-context-menu setting reaches us
-		self.connect('navigation-policy-decision-requested', self.on_navigate_decision)
-		self.connect('navigation-requested', self.on_navigate)
-		self.connect('new-window-policy-decision-requested', self.on_new_window_decision)
-		self.connect('create-web-view', self.on_new_window)
+		self.connect('populate-popup', self._on_populate_popup) #TODO: remove this when the enable-default-context-menu setting reaches us
+		self.connect('navigation-policy-decision-requested', self._on_navigate_decision)
+		self.connect('navigation-requested', self._on_navigate)
+		self.connect('new-window-policy-decision-requested', self._on_new_window_decision)
+		self.connect('create-web-view', self._on_new_window)
 	
-	def new_browser_window(self, uri):
+	'''
+	Determines the ideal locale for the slideshow, based on the given locale,
+	or 'c' if an ideal one is not available.
+	@param  locale  The full locale string, for example en_AU.UTF8
+	@return  The available locale which best matches the input.
+	'''
+	def _find_available_locale(self, locale):
+		slides_dir = os.path.join(self.path, "slides")
+		locale_choice = 'c'
+		
+		if os.path.exists( os.path.join(slides_dir, "loc."+locale) ):
+			locale_choice = locale
+		else:
+			ll_cc = locale.split('.')[0]
+			ll = ll_cc.split('_')[0]
+			if os.path.exists('%s/loc.%s' % (slides_dir,ll_cc)):
+				locale_choice = ll_cc
+			elif os.path.exists('%s/loc.%s' % (slides_dir,ll)):
+				locale_choice = ll
+		
+		return locale_choice
+	
+	
+	def _new_browser_window(self, uri):
 		subprocess.Popen(['xdg-open', uri], close_fds=True)
 	
-	def on_navigate_decision(self, view, frame, req, action, decision):
+	def _on_navigate_decision(self, view, frame, req, action, decision):
 		reason = action.get_reason()
 		print(reason)
 		if reason == "link-clicked":
@@ -52,22 +92,22 @@ class SlideshowViewer(webkit.WebView):
 		decision.ignore()
 		return True
 	
-	def on_navigate(self, view, frame, req):
+	def _on_navigate(self, view, frame, req):
 		uri = req.get_uri()
 		print(uri)
 		self.new_browser_window(uri)
 		return True
 	
-	def on_new_window_decision(self, view, frame, req, action, decision):
+	def _on_new_window_decision(self, view, frame, req, action, decision):
 		uri = req.get_uri()
 		decision.ignore()
 		self.new_browser_window(uri)
 		return True
 	
-	def on_new_window(self, view, frame):
+	def _on_new_window(self, view, frame):
 		return True
 	
-	def on_populate_popup(self, view, menu):
+	def _on_populate_popup(self, view, menu):
 		for item in menu:
 			item.destroy()
 
@@ -85,8 +125,22 @@ def progress_increment(progressbar, fraction):
 	return True
 
 
+#Main program
 
-base_directory = os.path.dirname (sys.argv[0])
+
+default_path = os.path.abspath(os.path.dirname(sys.argv[0]))
+default_locale = locale.getlocale()[0]
+default_rtl = False
+
+parser = OptionParser(usage="usage: %prog [options] [slideshow]")
+parser.add_option("-l", "--locale", help="LOCALE to use for the slideshow", metavar="LOCALE", default=default_locale)
+parser.add_option("-r", "--rtl", action="store_true", help="use output in right-to-left format", default=default_rtl)
+parser.add_option("-p", "--path", help="path to the SLIDESHOW to be presented", metavar="SLIDESHOW", default=default_path)
+
+(options, args) = parser.parse_args()
+options.path = os.path.abspath(options.path)
+
+
 
 gtk.gdk.threads_init()
 
@@ -103,9 +157,7 @@ slideshow_container = gtk.VBox()
 slideshow_container.set_spacing(8)
 slideshow_window_align.add(slideshow_container)
 
-
-slideshow = SlideshowViewer(os.path.abspath(base_directory))
-
+slideshow = SlideshowViewer(options.path, locale=options.locale, rtl=options.rtl )
 
 install_progressbar = gtk.ProgressBar()
 install_progressbar.set_size_request(-1,30)
